tests/negative/bookinfo/authorizationpolicy-disallow-wildcard-principals-source.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: bad-details-not-namespaces
  namespace: bookinfo
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["*"]  # Запрещаем доступ из kube-system
        namespaces: ["kube-system"]
    to:
    - operation:
        ports: ["9080"]  # Реальный порт из Service
    when:
    - key: request.auth.claims[iss]
      values: ["https://accounts.google.com"]

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: bad-details-not-namespaces
  namespace: bookinfo
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["*"]  # Запрещаем доступ из kube-system
    to:
    - operation:
        ports: ["9080"]  # Реальный порт из Service
    when:
    - key: request.auth.claims[iss]
      values: ["https://accounts.google.com"]
